--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "C_Cpp.default.configurationProvider": "particle.particle-vscode-core",
     "particle.targetDevice": "VentilationBuddy",
-    "particle.firmwareVersion": "1.2.0-beta.1",
+    "particle.firmwareVersion": "1.5.0",
     "particle.targetPlatform": "photon",
-    "cortex-debug.openocdPath": "/Users/johanbrichau/.particle/toolchains/openocd/0.10.0-particle.1/bin/openocd"
+    "cortex-debug.openocdPath": "${command:particle.getDebuggerOpenocdPath}"
 }
